--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    
     <title>Antoine Philibert</title>
 </head>
 <body>
@@ -20,7 +22,7 @@
         <h2>ANTOINE PHILIBERT</h2>
     </div>
     <div class="contact">
-        <h3>CONTACT</h3>
+        <h3>contact</h3>
         <p class="contact__sub">Adresse :</p>
         <p>280 rue du pont à fourchon, 59000 Lille</p>
         <p class="contact__sub">Téléphone :</p>
@@ -29,17 +31,17 @@
         <p>antoine.philibert7@gmail.com</p>
     </div>
     <div class="langues">
-        <h3>LANGUES</h3>
+        <h3>langues</h3>
         <p>Français Anglais (lu, parlé et écrit)</p>
     </div>
     <div class="logiciels">
-        <h3>LOGICIELS</h3>
+        <h3>logiciels</h3>
         <p>VSCode Studio, Photoshop,
             TablePlus et PHPMyAdmin
         </p>
     </div>
     <div class="languages">
-        <h3>LANGUAGES</h3>
+        <h3>languages</h3>
         <div class="languages--text">
             <ul>
                 <li>HTML</li>
@@ -68,7 +70,7 @@
         </div>
     </div>
     <div class="reseaux">
-        <h3>RESEAUX</h3>
+        <h3>réseaux</h3>
         <a href="https://github.com/Neros80"><img src="/images/Github.png" alt="GitHub"></a>
         <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="/images/linkedin.png" alt="Linkedin"></a>
     </div>
@@ -82,7 +84,7 @@
         après une formation chez Open Classroom, je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un dev très motivé n'hésitez pas à me contacter</p>
     </div>
     <div class="experiences">
-        <h3>EXPERIENCES</h3>
+        <h3>éxperiences</h3>
         <div class="experiences__step">
             <p class="experiences__step--name">Developeur web</p>
             <p class="experiences__step--title">OPENCLASSROOM</p>
@@ -113,7 +115,7 @@
             <p class="experiences__step--desc">Modélisation de pièces de carrosseries, vérins, réservoirs pour poids lourds. Réalisation de plans,  gamme et nommenclatures.</p>
         </div>
         <div class="experiences__step">
-            <p class="experiences__step--name">mécanicien agricole</p>
+            <p class="experiences__step--name">Mécanicien agricole</p>
             <p class="experiences__step--title">DéSSINATEUR EN BUREAU D'éTUDES</p>
             <p class="experiences__step--loc">BEP MVMA - Lycée Pierre Mendès France à Péronne</p>
             <p class="experiences__step--years">2008 - 2010</p>
@@ -122,11 +124,24 @@
     </div>
     <div class="hobbies">
         <h3>Hobbis</h3>
-        <p>musique</p>
-        <p>bowling</p>
-        <p>Photographie</p>
-        <p>Vélo</p>
+        <div class="hobbies__content">
+            <div class="hobbies__content--act">
+                <img src="/images/musique.png" alt="Musique">
+                <p>musique</p>
+            </div>
+            <div class="hobbies__content--act">
+                <img src="/images/bowling.png" alt="Bowling">
+                <p>bowling</p>
+            </div>
+            <div class="hobbies__content--act">
+                <img src="/images/photo.png" alt="Photo">
+                <p>Photographie</p>
+            </div>
+            <div class="hobbies__content--act">
+                <img src="/images/velo.png" alt="Velo">
+                <p>Vélo</p>
+            </div>
+        </div>
     </div>
-</div>
 </body>
 </html>
