--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="languages">
         <h3>languages</h3>
-        <div class="languages--text">
+        <div class="languages__text">
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -55,11 +55,11 @@
                 <li>MySQL</li>
             </ul>
         </div>
-        <div class="languages--progressBar">
+        <div class="languages__progressBar">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="languages__progressBar--1"></li>
+                <li class="languages__progressBar--1"></li>
+                <li class="languages__progressBar--1"></li>
                 <li></li>
                 <li></li>
                 <li></li>
