--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="triangle-right">
         <div class="me">
             <div class="me__pic">
-                <img src="/images/19665517_10213967280726154_4114392788325547708_n.jpg" alt="AntoinePhilibert">
+                <img src="images/19665517_10213967280726154_4114392788325547708_n.jpg" alt="AntoinePhilibert">
             </div>
         <h2>ANTOINE PHILIBERT</h2>
     </div>
@@ -71,8 +71,8 @@
     </div>
     <div class="reseaux">
         <h3>réseaux</h3>
-        <a href="https://github.com/Neros80"><img src="/images/Github.png" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="/images/linkedin.png" alt="Linkedin"></a>
+        <a href="https://github.com/Neros80"><img src="images/Github.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="images/linkedin.png" alt="Linkedin"></a>
     </div>
 </div>
 </div>
@@ -126,19 +126,19 @@
         <h3>Hobbis</h3>
         <div class="hobbies__content">
             <div class="hobbies__content--act">
-                <img src="/images/musique.png" alt="Musique">
+                <img src="images/musique.png" alt="Musique">
                 <p>musique</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/bowling.png" alt="Bowling">
+                <img src="images/bowling.png" alt="Bowling">
                 <p>bowling</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/photo.png" alt="Photo">
+                <img src="images/photo.png" alt="Photo">
                 <p>Photographie</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/velo.png" alt="Velo">
+                <img src="images/velo.png" alt="Velo">
                 <p>Vélo</p>
             </div>
         </div>
