ajout grid + btn cv

--- a/Index.html
+++ b/Index.html
@@ -10,25 +10,17 @@
     <title>Antoine Philibert</title>
 </head>
 <body>
-    <header>
-        <h1>DEVELOPPEUR WEB JUNIOR</h1>
-    </header>
 <div class="info">
     <div id="triangle-right">
         <div class="me">
             <div class="me__pic">
-                <img src="/images/19665517_10213967280726154_4114392788325547708_n.jpg" alt="AntoinePhilibert">
+                <img src="images/19665517_10213967280726154_4114392788325547708_n.jpg" alt="AntoinePhilibert">
             </div>
-        <h2>ANTOINE PHILIBERT</h2>
+        <h1>ANTOINE PHILIBERT</h1>
     </div>
     <div class="contact">
         <h3>contact</h3>
-        <p class="contact__sub">Adresse :</p>
-        <p>280 rue du pont à fourchon, 59000 Lille</p>
-        <p class="contact__sub">Téléphone :</p>
-        <p>06 58 89 30 39</p>
-        <p class="contact__sub">Email :</p>
-        <p>antoine.philibert7@gmail.com</p>
+        <a class="contact__btn" href="pdf/CV_Antoine_Philibert.pdf" title="CV">Télecharger le CV</a>
     </div>
     <div class="langues">
         <h3>langues</h3>
@@ -71,12 +63,13 @@
     </div>
     <div class="reseaux">
         <h3>réseaux</h3>
-        <a href="https://github.com/Neros80"><img src="/images/Github.png" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="/images/linkedin.png" alt="Linkedin"></a>
+        <a href="https://github.com/Neros80"><img src="images/Github.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="images/linkedin.png" alt="Linkedin"></a>
     </div>
 </div>
 </div>
 <div class="skills">
+    <h2>DEVELOPPEUR WEB JUNIOR</h2>
     <div class="intro">
         <h3>A PROPOS</h3>
         <p>Ancien Concepteur en bureau d'études,
@@ -86,16 +79,16 @@
     <div class="experiences">
         <h3>éxperiences</h3>
         <div class="experiences__step">
-            <p class="experiences__step--name">Developeur web</p>
-            <p class="experiences__step--title">OPENCLASSROOM</p>
-            <p class="experiences__step--loc"></p>
+            <p class="experiences__step--name">OPENCLASSROOM</p>
+            <p class="experiences__step--title">Dévelopeur web</p>
+            <p class="experiences__step--loc">Formation en ligne</p>
             <p class="experiences__step--years">2021 - 2022</p>
             <p class="experiences__step--desc">Formation pendant 9 mois au métier de développeur web frontend avec les languages HTML, CSS, JS et Vue.JS.
-            Autoformation aux languages React JS et Python Django.</p>
+            Autoformation aux languages <b>React JS</b> et <b>Python Django.</b></p>
         </div>
         <div class="experiences__step">
             <p class="experiences__step--name">Europe Téchnologies</p>
-            <p class="experiences__step--title">préparateur méthodes</p>
+            <p class="experiences__step--title">Préparateur méthodes</p>
             <p class="experiences__step--loc">CDI - Seclin(Dassault Aviation)</p>
             <p class="experiences__step--years">2018 - 2020</p>
             <p class="experiences__step--desc">Mise en place d’un service methodes, formations aux outils des nouveaux salariés.</p>
@@ -126,19 +119,19 @@
         <h3>Hobbis</h3>
         <div class="hobbies__content">
             <div class="hobbies__content--act">
-                <img src="/images/musique.png" alt="Musique">
+                <img src="images/musique.png" alt="Musique">
                 <p>musique</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/bowling.png" alt="Bowling">
+                <img src="images/bowling.png" alt="Bowling">
                 <p>bowling</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/photo.png" alt="Photo">
+                <img src="images/photo.png" alt="Photo">
                 <p>Photographie</p>
             </div>
             <div class="hobbies__content--act">
-                <img src="/images/velo.png" alt="Velo">
+                <img src="images/velo.png" alt="Velo">
                 <p>Vélo</p>
             </div>
         </div>
