--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="experiences">
         <h3>éxperiences</h3>
         <div class="experiences__step">
-            <p class="experiences__step--name">OPENCLASSROOM</p>
+            <p class="experiences__step--name">OPEN CLASSROOMS</p>
             <p class="experiences__step--title">Dévelopeur web</p>
             <p class="experiences__step--loc">Formation en ligne</p>
             <p class="experiences__step--years">2021 - 2022</p>
