--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3>A PROPOS</h3>
         <p>Ancien Concepteur en bureau d'études,
         j'ai pris la décision de tenter une nouvelle aventure en tant que développeur web,
-        après une formation chez Open Classroom, je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un dev très motivé n'hésitez pas à me contacter</p>
+        après une formation chez Open Classroom. Je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un dev très motivé n'hésitez pas à me contacter</p>
     </div>
     <div class="experiences">
         <h3>éxperiences</h3>
@@ -87,7 +87,7 @@
             Autoformation aux languages <b>React JS</b> et <b>Python Django.</b></p>
         </div>
         <div class="experiences__step">
-            <p class="experiences__step--name">Europe Téchnologies</p>
+            <p class="experiences__step--name">Europe Technologies</p>
             <p class="experiences__step--title">Préparateur méthodes</p>
             <p class="experiences__step--loc">CDI - Seclin(Dassault Aviation)</p>
             <p class="experiences__step--years">2018 - 2020</p>
@@ -95,21 +95,21 @@
         </div>
         <div class="experiences__step">
             <p class="experiences__step--name">SACI</p>
-            <p class="experiences__step--title">Déssinateur en bureau d’études</p>
+            <p class="experiences__step--title">Dessinateur en bureau d’études</p>
             <p class="experiences__step--loc">Niveau BTS CPI en alterance - PROMEO à Amiens</p>
             <p class="experiences__step--years">2015 - 2018</p>
             <p class="experiences__step--desc">Conception et modélisation de pièces, d'ensembles 3D et réalisation de plansdans le domaine de l'aéronautique et du ferroviaire.</p>
         </div>
         <div class="experiences__step">
             <p class="experiences__step--name">AFHYMAT</p>
-            <p class="experiences__step--title">DéSSINATEUR EN BUREAU D'éTUDES</p>
+            <p class="experiences__step--title">DeSSINATEUR EN BUREAU D'éTUDES</p>
             <p class="experiences__step--loc">Bac Pro EDPI en alterance - PROMEO à Amiens</p>
             <p class="experiences__step--years">2011 - 2013</p>
             <p class="experiences__step--desc">Modélisation de pièces de carrosseries, vérins, réservoirs pour poids lourds. Réalisation de plans,  gamme et nommenclatures.</p>
         </div>
         <div class="experiences__step">
             <p class="experiences__step--name">Mécanicien agricole</p>
-            <p class="experiences__step--title">DéSSINATEUR EN BUREAU D'éTUDES</p>
+            <p class="experiences__step--title">DeSSINATEUR EN BUREAU D'éTUDES</p>
             <p class="experiences__step--loc">BEP MVMA - Lycée Pierre Mendès France à Péronne</p>
             <p class="experiences__step--years">2008 - 2010</p>
             <p class="experiences__step--desc">Maintenance des Véhicules et Matériels Agricoles.</p>
