--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3>A PROPOS</h3>
         <p>Ancien Concepteur en bureau d'études,
         j'ai pris la décision de tenter une nouvelle aventure en tant que développeur web,
-        après une formation chez Open Classroom. Je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un dev très motivé n'hésitez pas à me contacter</p>
+        après une formation chez Open Classroom. Je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un développeur très motivé n'hésitez pas à me contacter</p>
     </div>
     <div class="experiences">
         <h3>éxperiences</h3>
