Correction + maj de plusieurs éléments

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1>ANTOINE PHILIBERT</h1>
     </div>
     <div class="contact">
-        <h3>contact</h3>
         <a class="contact__btn" href="pdf/CV_Antoine_Philibert.pdf" title="CV">Télecharger le CV</a>
     </div>
     <div class="langues">
@@ -102,14 +101,14 @@
         </div>
         <div class="experiences__step">
             <p class="experiences__step--name">AFHYMAT</p>
-            <p class="experiences__step--title">DeSSINATEUR EN BUREAU D'éTUDES</p>
+            <p class="experiences__step--title">DESSINATEUR EN BUREAU D'éTUDES</p>
             <p class="experiences__step--loc">Bac Pro EDPI en alterance - PROMEO à Amiens</p>
             <p class="experiences__step--years">2011 - 2013</p>
             <p class="experiences__step--desc">Modélisation de pièces de carrosseries, vérins, réservoirs pour poids lourds. Réalisation de plans,  gamme et nommenclatures.</p>
         </div>
         <div class="experiences__step">
-            <p class="experiences__step--name">Mécanicien agricole</p>
-            <p class="experiences__step--title">DeSSINATEUR EN BUREAU D'éTUDES</p>
+            <p class="experiences__step--name">Mécanique agricole </p>
+            <p class="experiences__step--title">Mécanicien agricole</p>
             <p class="experiences__step--loc">BEP MVMA - Lycée Pierre Mendès France à Péronne</p>
             <p class="experiences__step--years">2008 - 2010</p>
             <p class="experiences__step--desc">Maintenance des Véhicules et Matériels Agricoles.</p>
