--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="hobbies">
-        <h3>Hobbis</h3>
+        <h3>Hobbies</h3>
         <div class="hobbies__content">
             <div class="hobbies__content--act">
                 <img src="images/musique.png" alt="Musique">
