--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
     </div>
     <div class="langues">
         <h3>langues</h3>
+        <div class="bleu__ligne"></div>
         <p>Français Anglais (lu, parlé et écrit)</p>
     </div>
     <div class="logiciels">
         <h3>logiciels</h3>
+        <div class="bleu__ligne"></div>
         <p>VSCode Studio, Photoshop,
             TablePlus et PHPMyAdmin
         </p>
     </div>
     <div class="languages">
         <h3>languages</h3>
+        <div class="bleu__ligne"></div>
         <div class="languages__text">
             <ul>
                 <li>HTML</li>
@@ -62,8 +65,11 @@
     </div>
     <div class="reseaux">
         <h3>réseaux</h3>
+        <div class="bleu__ligne"></div>
+        <div class="reseaux__icons">
         <a href="https://github.com/Neros80"><img src="images/Github.png" alt="GitHub"></a>
         <a href="https://www.linkedin.com/in/antoine-philibert-56908b1a1/"><img src="images/linkedin.png" alt="Linkedin"></a>
+        </div>
     </div>
 </div>
 </div>
@@ -71,12 +77,14 @@
     <h2>DEVELOPPEUR WEB JUNIOR</h2>
     <div class="intro">
         <h3>A PROPOS</h3>
+        <div class="sd__bleu__ligne"></div>
         <p>Ancien Concepteur en bureau d'études,
         j'ai pris la décision de tenter une nouvelle aventure en tant que développeur web,
         après une formation chez Open Classroom. Je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un développeur très motivé n'hésitez pas à me contacter</p>
     </div>
     <div class="experiences">
         <h3>éxperiences</h3>
+        <div class="sd__bleu__ligne"></div>
         <div class="experiences__step">
             <p class="experiences__step--name">OPEN CLASSROOMS</p>
             <p class="experiences__step--title">Dévelopeur web</p>
@@ -116,6 +124,7 @@
     </div>
     <div class="hobbies">
         <h3>Hobbies</h3>
+        <div class="sd__bleu__ligne"></div>
         <div class="hobbies__content">
             <div class="hobbies__content--act">
                 <img src="images/musique.png" alt="Musique">
