modification de source

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="languages__text">
             <ul>
                 <li>HTML</li>
-                <li>CSS</li>
+                <li>CSS/SCSS</li>
                 <li>Sass</li>
                 <li>JavaScript</li>
                 <li>React</li>
@@ -78,10 +78,11 @@
     <div class="intro">
         <h3>A PROPOS</h3>
         <div class="sd__bleu__ligne"></div>
-        <p>Ancien Concepteur en bureau d'études,
-        j'ai pris la décision de tenter une nouvelle aventure en tant que développeur web,
-        après une formation chez Open Classroom. Je suis aujourd'hui à la recherche d'une entreprise qui pourra m'apporter une nouvelle expérience. Si vous recherchez un développeur très motivé n'hésitez pas à me contacter</p>
-    </div>
+        <p>Ancien concepteur en bureau d'études,
+             j'ai pris la décision de tenter une nouvelle aventure en tant que développeur web, 
+             après une formation chez Open Classroom. 
+             Disponible, je suis aujourd'hui à la recherche d'une entreprise pour concrétiser cette nouvelle
+              expérience et pour intégrer une équipe de développeurs.</p></div>
     <div class="experiences">
         <h3>éxperiences</h3>
         <div class="sd__bleu__ligne"></div>
